add: php and nginx services

--- a/docker/infrastructure/dev/Makefile
+++ b/docker/infrastructure/dev/Makefile
@@ -49,7 +49,7 @@ port-check: ## shows this project port availability on local machine
 	fi
 
 # -------------------------------------------------------------------------------------------------
-#  Enviroment
+#  Environment
 # -------------------------------------------------------------------------------------------------
 .PHONY: env env-set
 
