feat: added mysql service and make commands for dev docker

--- a/docker/infrastructure/dev/.env.dev-docker-example
+++ b/docker/infrastructure/dev/.env.dev-docker-example
@@ -2,12 +2,14 @@
 ########## Docker Configuration ##########
 ### REMOVE COMMENTS WHEN COPY THIS FILE ###
 ############################################
-
+UID=1000
+GID=1000
+USER=yevhenii
 # Leave it empty if no need for sudo user to execute docker commands
-#DOCKER_USER=sudo
+DOCKER_USER=sudo
 
 # Container data for docker-compose.yml
-PROJECT_NAME="PR PROJECT"       # <- this name will be prompt for automation commands
+PROJECT_NAME="Stabborn"       # <- this name will be prompt for automation commands
 #PROJECT_ABBR="pr-proj"          # <- part of the service image tag - useful if similar services are running
 #PROJECT_HOST="127.0.0.1"        # <- for this project is not necessary
 
