--- a/docker/infrastructure/dev/nginx/config/nginx.conf
+++ b/docker/infrastructure/dev/nginx/config/nginx.conf
@@ -58,7 +58,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass backend:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_buffer_size 32k;
