--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,12 @@
     "prepare": "cd .. && husky backend/.husky"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.4.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "axios": "^1.6.4",
     "husky": "^9.1.5",
     "laravel-vite-plugin": "^1.0",
+    "validate-branch-name": "^1.3.1",
     "vite": "^5.0"
   }
 }
