--- a/backend/.github/workflows/ci-checks.yml
+++ b/backend/.github/workflows/ci-checks.yml
@@ -6,7 +6,7 @@ on:
 #      - main
 #      - staging
 #      - production
-#  pull_request:
+  pull_request:
 #    branches:
 #      - main
 #      - develop
