fix: error a step cannot have both the  and  keys

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -34,9 +34,9 @@ jobs:
 #      - name: Get npm dependencies.
 #        if: steps.filter.outputs.frontend == 'true'
 #        run: npm install
-
+      - name: Build The Docker Images
         run: make dev-build
-      - name: Starts The Docker Images
+      - name: Run The Docker Images
         run: make dev-up
       - name: Check Running Containers
         run: docker ps -a
