fix: error with comand shell

--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -18,10 +18,10 @@ jobs:
   build_backend:
     name: Build Backend App
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        # Backend folder working directory.
-        working-directory: backend
+#    defaults:
+#      run:
+#        # Backend folder working directory.
+#        working-directory: backend
     steps:
       - uses: actions/checkout@v4
 # Use filter if project contains separated frontend app
