--- a/docker/infrastructure/dev/docker-compose-dev.yml
+++ b/docker/infrastructure/dev/docker-compose-dev.yml
@@ -14,9 +14,12 @@ services:
     tty: true
     restart: unless-stopped
     depends_on:
-      - db
-      - nginx
-      - redis
+      - db:
+          condition: "service_healthy"
+      - nginx:
+          condition: "service_healthy"
+      - redis:
+          condition: "service_healthy"
     networks:
       - db-network
       - nginx-network
@@ -77,7 +80,8 @@ services:
     volumes:
       - redis-insight-data:/db
     depends_on:
-      - redis
+      - redis:
+          condition: "service_healthy"
     networks:
       - redis-network
 
