fix: error with mysql image

--- a/docker/infrastructure/dev/nginx/config/nginx.conf
+++ b/docker/infrastructure/dev/nginx/config/nginx.conf
@@ -3,6 +3,17 @@ map $http_x_forwarded_proto $fe_https {
   https on;
 }
 
+upstream nginx_server {
+  server nginx-server;
+}
+
+server {
+    location / {
+        proxy_pass http://nginx_server;
+        health_check;
+    }
+}
+
 server {
     listen 80 default_server;
     server_name _;
