--- a/docker/infrastructure/dev/docker-compose-dev.yml
+++ b/docker/infrastructure/dev/docker-compose-dev.yml
@@ -16,8 +16,6 @@ services:
     depends_on:
         db:
           condition: "service_healthy"
-        nginx:
-          condition: "service_healthy"
         redis:
           condition: "service_healthy"
     networks:
@@ -26,8 +24,7 @@ services:
       - redis-network
 
   db:
-    image: mysql:8.0.33
-    pull_policy: never
+    image: mysql:9.0.1
     container_name: ${DOCKER_CONTAINER_NAME_PREFIX}-db
     environment:
       - MYSQL_DATABASE=${DOCKER_DB_DATABASE}
@@ -41,6 +38,12 @@ services:
     restart: unless-stopped
     networks:
       - db-network
+    healthcheck:
+      test: [ "CMD-SHELL", "mysqladmin ping -h localhost -u${DOCKER_DB_USERNAME} -p${DOCKER_DB_PASSWORD}" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+      start_period: 30s
 
   nginx:
     build:
@@ -57,6 +60,13 @@ services:
     restart: unless-stopped
     networks:
       - nginx-network
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "http://localhost:8080/" ]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
+
   redis:
     image: redis:7.4-alpine
     container_name: redis
@@ -67,6 +77,11 @@ services:
       - "6379:6379"
     networks:
       - redis-network
+    healthcheck:
+      test: redis-cli ping
+      interval: 5s
+      timeout: 10s
+      retries: 20
 
   redis_insight:
     image: redislabs/redisinsight:2.54.0
