--- a/docker/infrastructure/dev/Makefile
+++ b/docker/infrastructure/dev/Makefile
@@ -1,133 +1,70 @@
-# This Makefile requires GNU Make.
-MAKEFLAGS += --silent
-
-# Settings
-C_BLU='\033[0;34m'
-C_GRN='\033[0;32m'
-C_RED='\033[0;31m'
-C_YEL='\033[0;33m'
-C_END='\033[0m'
-
-include .env
-
-DOCKER_PROJ="$(PROJECT_NAME) - LARAVEL 11"
-DOCKER_ABBR=$(PROJECT_ABBR)
-DOCKER_HOST=$(PROJECT_HOST)
-DOCKER_IMGK=$(BACKEND_IMGK)
-DOCKER_CAAS=$(BACKEND_CAAS)
-DOCKER_PORT=$(BACKEND_PORT)
-DOCKER_BIND=$(BACKEND_BIND)
-
-CURRENT_DIR=$(patsubst %/,%,$(dir $(realpath $(firstword $(MAKEFILE_LIST)))))
-DIR_BASENAME=$(shell basename $(CURRENT_DIR))
-ROOT_DIR=$(CURRENT_DIR)
-
-DOCKER_COMPOSE?=$(DOCKER_USER) docker-compose
-DOCKER_COMPOSE_RUN=$(DOCKER_COMPOSE) run --rm
-DOCKER_EXEC_TOOLS_APP=$(DOCKER_USER) docker exec -it $(DOCKER_CAAS) sh
-
-APPLICATION_UPDATE="composer update"
-APPLICATION_INSTALL='composer create-project laravel/laravel:^11 .'
-
-help: ## shows this Makefile help message
-	echo 'usage: make [target]'
-	echo
-	echo 'targets:'
-	egrep '^(.+)\:\ ##\ (.+)' ${MAKEFILE_LIST} | column -t -c 2 -s ':#'
-
 # -------------------------------------------------------------------------------------------------
-#  System
+#  Dev Application Service
 # -------------------------------------------------------------------------------------------------
-.PHONY: port-check
+.PHONY: dev-set dev-up dev-rebuild dev-down dev-start dev-stop dev-destroy
 
-port-check: ## shows this project port availability on local machine
-	echo "Checking configuration for "${C_YEL}"$(DOCKER_PROJ)"${C_END}" container:";
-	if [ -z "$$($(DOCKER_USER) lsof -i :$(DOCKER_PORT))" ]; then \
-		echo ${C_BLU}"$(DOCKER_PROJ)"${C_END}" > port:"${C_GRN}"$(DOCKER_PORT) is free to use."${C_END}; \
-    else \
-		echo ${C_BLU}"$(DOCKER_PROJ)"${C_END}" > port:"${C_RED}"$(DOCKER_PORT) is busy. Update ./.env file."${C_END}; \
-	fi
+dev-set: ## Sets the project environment file to build the container NEED FIX
+	cd infrastructure/nginx-php && $(MAKE) env-set
 
-# -------------------------------------------------------------------------------------------------
-#  Environment
-# -------------------------------------------------------------------------------------------------
-.PHONY: env env-set
+dev-up: ## Creates the project containers from docker-compose-dev.yml file
+	cd docker/infrastructure/dev && docker compose --env-file .env -f docker-compose-dev.yml up -d
 
-env: ## checks if docker .env file exists
-	if [ -f ./docker/.env ]; then \
-		echo ${C_BLU}$(DOCKER_PROJ)${C_END}" docker-compose.yml .env file "${C_GRN}"is set."${C_END}; \
-    else \
-		echo ${C_BLU}$(DOCKER_PROJ)${C_END}" docker-compose.yml .env file "${C_RED}"is not set."${C_END}" \
-	Create it by executing "${C_YEL}"$$ make env-set"${C_END}; \
-	fi
+dev-down: ## Stop and delete all containers
+	cd docker/infrastructure/dev && docker compose --env-file .env -f docker-compose-dev.yml down
 
-env-set: ## sets docker .env file
-	echo "COMPOSE_PROJECT_ABBR=\"$(DOCKER_ABBR)\"\
-	\nCOMPOSE_PROJECT_IMGK=\"$(DOCKER_IMGK)\"\
-	\nCOMPOSE_PROJECT_NAME=\"$(DOCKER_CAAS)\"\
-	\nCOMPOSE_PROJECT_HOST=\"$(DOCKER_HOST)\"\
-	\nCOMPOSE_PROJECT_PORT=$(DOCKER_PORT)\
-	\nCOMPOSE_PROJECT_PATH=\"$(DOCKER_BIND)\"" > ./docker/.env; \
-	echo ${C_BLU}"$(DOCKER_PROJ)"${C_END}" docker-compose.yml .env file "${C_GRN}"has been set."${C_END};
+dev-rebuild: ## Rebuild the project containers from docker-compose-dev.yml file
+	cd docker/infrastructure/dev && docker compose --env-file .env -f docker-compose-dev.yml up -d --build
 
-# -------------------------------------------------------------------------------------------------
-#  Container
-# -------------------------------------------------------------------------------------------------
-.PHONY: container-ip ssh build up start stop restart clear destroy dev
+dev-build: ## Build dev environment from docker-compose-dev.yml file
+	cd docker/infrastructure/dev && docker compose --env-file .env -f docker-compose-dev.yml build
 
-container-ip:
-	$(DOCKER_USER) docker inspect -f '{{range.NetworkSettings.Networks}}{{.IPAddress}}{{end}}' $(DOCKER_CAAS)
+dev-start: ## Starts the project container running NEED FIX
+	cd infrastructure/nginx-php && $(MAKE) start
 
-ssh: ## enters the container shell
-	$(DOCKER_EXEC_TOOLS_APP)
+dev-stop: ## Stops the project container but data won't be destroyed NEED FIX
+	cd infrastructure/nginx-php && $(MAKE) stop
 
-#build: ## builds the container from Dockerfile
-#	cd docker && $(DOCKER_COMPOSE) up --build --no-recreate -d
-#
-#up: ## attaches to containers for a service and also starts any linked services
-#	cd docker && $(DOCKER_COMPOSE) up -d
-#
-#start: ## starts the container running
-#	cd docker && $(DOCKER_COMPOSE) start
-#
-#stop: ## stops the container running - data won't be destroyed
-#	cd docker && $(DOCKER_COMPOSE) stop
-#
-#restart: ## execute this Makefile "stop" & "start" recipes
-#	$(MAKE) stop start
-#
-#clear: ## removes container from Docker running containers
-#	cd docker && $(DOCKER_COMPOSE) kill || true
-#	cd docker && $(DOCKER_COMPOSE) rm --force || true
-#	cd docker && $(DOCKER_COMPOSE) down -v --remove-orphans || true
-#
-#destroy: ## delete container image from Docker - Docker prune commands still needed to be applied manually
-#	cd docker && $(DOCKER_USER) docker rmi -f $(DOCKER_CAAS):$(DOCKER_ABBR)$(DOCKER_IMGK)
-#
-#dev: ## set a development enviroment
-#	echo ${C_YEL}"\"dev\" recipe has not usage in this project"${C_END};
-#
+dev-destroy: ## Removes the project from Docker network destroying its data and Docker image NEED FIX
+	cd infrastructure/nginx-php && $(MAKE) clear destroy
+
 ## -------------------------------------------------------------------------------------------------
-##  Container Application
+##  Backend Service
 ## -------------------------------------------------------------------------------------------------
-#.PHONY: app-install app-update
-#
-#app-install: ## installs the application an dependencies packages
-#	cd docker && $(DOCKER_EXEC_TOOLS_APP) -c $(APPLICATION_INSTALL)
-#
-#app-update: ## updates dependencies packages
-#	cd docker && $(DOCKER_EXEC_TOOLS_APP) -c $(APPLICATION_UPDATE)
-#
+.PHONY: backend-ssh backend-update
+
+backend-ssh: ## enters the backend container shell
+	cd docker/infrastructure/dev && docker exec -it dev-backend bash
+
+backend-update: ## updates the backend set version into container NEED FIX
+	cd infrastructure/nginx-php && $(MAKE) app-update
+
 ## -------------------------------------------------------------------------------------------------
-##  Container update on the run
+##  Database Service
 ## -------------------------------------------------------------------------------------------------
-#.PHONY: nginx-conf php-conf php-fpm-conf
-#
-#nginx-conf: ## updates any configuration NGINX changes while container is running
-#	$(DOCKER_USER) docker run -v "`pwd`/nginx-server.conf:/etc/nginx/conf.d/server.conf" $(DOCKER_CAAS):$(DOCKER_ABBR)$(DOCKER_IMGK)
-#
-#php-conf: ## updates any configuration PHP changes while container is running
-#	$(DOCKER_USER) docker run -v "`pwd`/php-setting.ini:/etc/php83/conf.d/settings.ini" $(DOCKER_CAAS):$(DOCKER_ABBR)$(DOCKER_IMGK)
-#
-#php-fpm-conf: ## updates any configuration PHP-FPM changes while container is running
-#	$(DOCKER_USER) docker run -v "`pwd`/php-fpm-settings.conf:/etc/php83/php-fpm.d/server.conf" $(DOCKER_CAAS):$(DOCKER_ABBR)$(DOCKER_IMGK)
+.PHONY: dev-db-shell dev-db-install dev-db-replace dev-db-backup
+
+dev-db-shell: ## enter into dev-db container shell
+	docker exec -it $(DOCKER_CONTAINER_NAME_PREFIX)-db sh
+
+dev-db-install: ## installs into container database the init sql file from resources/database
+	sudo docker exec -i $(DOCKER_CONTAINER_NAME_PREFIX)-db sh -c 'exec mysql $(DOCKER_DB_DATABASE) -uroot -p"$(DOCKER_DB_PASSWORD)"' < docker/infrastructure/dev/mysql/dev-mysql-init.sql
+	echo ${C_YEL}"DATABASE"${C_END}" has been installed."
+
+dev-db-replace: ## replaces container database with the latest sql backup file from resources/database
+	sudo docker exec -i $(DOCKER_CONTAINER_NAME_PREFIX)-db sh -c 'exec mysql $(DOCKER_DB_DATABASE) -uroot -p"$(DOCKER_DB_PASSWORD)"' < docker/infrastructure/dev/mysql/dev-mysql-backup-$(CURRENT_DATE).sql
+	echo ${C_YEL}"DATABASE"${C_END}" has been replaced."
+
+dev-db-backup: ## creates / replace a sql backup file from container database in resources/database
+	sudo docker exec $(DOCKER_CONTAINER_NAME_PREFIX)-db sh -c 'exec mysqldump $(DOCKER_DB_DATABASE) -uroot -p"$(DOCKER_DB_PASSWORD)"' > docker/infrastructure/dev/mysql/dev-mysql-backup-$(CURRENT_DATE).sql
+	echo ${C_YEL}"DATABASE"${C_END}" backup has been created."
+
+## -------------------------------------------------------------------------------------------------
+##  Repository Helper
+## -------------------------------------------------------------------------------------------------
+repo-flush: ## clears local git repository cache specially to update .gitignore
+	git rm -rf --cached .
+	git add .
+	git commit -m "fix: cache cleared for untracked files"
+
+repo-commit: ## echoes common git commands
+	echo "git add . && git commit -m \"maint: ... \" && git push -u origin main"
