--- a/.github/workflows/ci-checks.yml
+++ b/.github/workflows/ci-checks.yml
@@ -18,6 +18,8 @@ jobs:
   build_backend:
     name: Build Backend App
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
 # Use filter if project contains separated frontend app
