refactor: small changes

--- a/docker/infrastructure/dev/.env
+++ b/docker/infrastructure/dev/.env
@@ -3,6 +3,7 @@ GID=1000
 USER=yevhenii
 
 DOCKER_CONTAINER_NAME_PREFIX=dev
+DOCKER_APP_NAME=laravel
 
 DOCKER_DB_PORT=3306
 DOCKER_DB_DATABASE=laravel
