--- a/docker/infrastructure/dev/.env.dev-docker-example
+++ b/docker/infrastructure/dev/.env.dev-docker-example
@@ -1,7 +1,10 @@
-###########################################
-########## Docker Configuration ##########
-### REMOVE COMMENTS WHEN COPY THIS FILE ###
-############################################
+#############################################################
+###########                                       ###########
+###########       Docker Configuration            ###########
+###########                                       ###########
+########### REMOVE COMMENTS WHEN COPY THIS FILE   ###########
+#############################################################
+
 UID=1000
 GID=1000
 USER=yevhenii
